hexapod/hexapod_ros/log/build_2025-10-31_12-36-01/hexapod_ros/stderr.log
  File "/home/spider/GWEN_V2/SpiderGwen/hexapod/hexapod_ros/install/hexapod_ros/lib/python3.10/site-packages/hexapod_ros/maestro_driver.py", line 19
    for data in (goals.,request,targets):
                       ^
SyntaxError: invalid syntax

